# c-simdb

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.rst  config.h.in  db.c  db.h  demo.c  main.c  second.c  second.h
.github/workflows/: c_build_check.yml  cmake.yml
simdb/: CMakeLists.txt  simdb.c  simdb.h  simdb.h.in  simdb.pc.in
